# interactive-image

./: CMakeLists.txt  ii.cpp  ii.h  ii.ui  image.qrc  main.cpp  my_qlabel.cpp  my_qlabel.h  view.cpp  view.h
ii_core/: CMakeLists.txt  convex_hull.cpp  convex_hull.h  my_rend.cpp  my_rend.h  my_texture.cpp  my_texture.h  optimize.cpp  optimize.h  scene_cal.cpp  scene_cal.h  shadow_cal.cpp  shadow_cal.h
