CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
PROJECT("ii")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})

FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtOpenGL QtXml REQUIRED)
SET(CORELIBS ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${QT_QTXML_LIBRARY})
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

FIND_PACKAGE(GLUT)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(QGLViewer REQUIRED)
INCLUDE_DIRECTORIES(${QGLVIEWER_INCLUDE_DIR})
SET(CORELIBS ${CORELIBS} ${QGLVIEWER_LIBRARY} ${GLUT_LIBRARY} ${OPENGL_LIBRARY})

FIND_PACKAGE(OpenCV REQUIRED)
SET(CORELIBS ${CORELIBS}  ${OpenCV_LIBS})

FIND_PACKAGE(Eigen3 REQUIRED)
INCLUDE_DIRECTORIES(EIGEN3_INCLUDE_DIR)

FIND_PACKAGE(SOIL REQUIRED)
INCLUDE_DIRECTORIES(SOIL_INCLUDE_DIRS)
SET(CORELIBS ${CORELIBS} ${SOIL_LIBRARIES})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})

SET(ii_SOURCES main.cpp ii.cpp my_qlabel.cpp view.cpp)
SET(ii_HEADERS ii.h my_qlabel.h)
SET(ii_FORMS ii.ui)
SET(ii_RESOURCES image.qrc)

QT4_WRAP_CPP(ii_HEADERS_MOC ${ii_HEADERS})
QT4_WRAP_UI(ii_FORMS_HEADERS ${ii_FORMS})
QT4_ADD_RESOURCES(ii_RESOURCES_RCC ${ii_RESOURCES})

ADD_SUBDIRECTORY(ii_core)

ADD_EXECUTABLE(ii 
  ${ii_SOURCES}
  ${ii_HEADERS_MOC}
  ${ii_FORMS_HEADERS}
  ${ii_RESOURCES_RCC})
TARGET_LINK_LIBRARIES(ii ${CORELIBS} iiCore)
